--- a/Front-bolt.new-1versao/index.html
+++ b/Front-bolt.new-1versao/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EsTagio+ | Plataforma de Estágios</title>
+    <title>WorkMatch | Plataforma de Estágios</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 </head>
