Mudanças na logo

--- a/versao2/index.html
+++ b/versao2/index.html
@@ -13,6 +13,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
+                    <img src="images/logo.png" class="main-logo"/>
                     <h1>Workmatch</h1>
                 </div>
                 <nav class="nav">
