--- a/versao2/vagas.html
+++ b/versao2/vagas.html
@@ -12,7 +12,8 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <a href="index.html"><h1>EsTagio+</h1></a>
+                    <img src="images/logo.png" class="main-logo"/>
+                    <a href="index.html"><h1>WorkMatch</h1></a>
                 </div>
                 <nav class="nav">
                     <a href="index.html" class="nav-link">Início</a>
@@ -102,11 +103,11 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>EsTagio+</h3>
+                    <h3>WorMatch</h3>
                     <p>Conectando talentos com oportunidades</p>
                 </div>
                 <div class="footer-section">
-                    <h4>Links Rápidos</h4>
+                    <h4>Links</h4>
                     <a href="vagas.html">Vagas</a>
                     <a href="auth.html">Para Empresas</a>
                     <a href="index.html#sobre">Sobre Nós</a>
