--- a/versao2/gerenciar-vagas.html
+++ b/versao2/gerenciar-vagas.html
@@ -116,7 +116,9 @@
             </div>
         </div>
     </div>
-
+    <script >
+        
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
