--- a/versao2/index.html
+++ b/versao2/index.html
@@ -14,7 +14,7 @@
             <div class="header-content">
                 <div class="logo">
                     <img src="images/logo.png" class="main-logo"/>
-                    <h1>Workmatch</h1>
+                    <h1>WorkMatch</h1>
                 </div>
                 <nav class="nav">
                     <a href="#vagas" class="nav-link">Vagas</a>
