--- a/versao2/editar-perfil.html
+++ b/versao2/editar-perfil.html
@@ -13,6 +13,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
+                    <img src="images/logo.png" class="main-logo"/>
                     <a href="index.html"><h1>WorkMatch</h1></a>
                 </div>
                 <nav class="nav">
